Install Mailjet for Email and Fix bug in reset password, New CSS to allow better contrast

--- a/staticfiles/css/blog_info.css
+++ b/staticfiles/css/blog_info.css
@@ -2,7 +2,7 @@
     font-family: Lato, sans-serif;
     font-size: 1.4rem;
     font-weight: 700;
-    color: #4A4A4F;
+    color: #02264d;
 }
 
 .orange-beara {
